2007-03-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/src/ldpc_bersim_awgn.cpp,
	doc/tutorial/src/ldpc_gen_codes.cpp, itpp/comm/ldpc.cpp,
	itpp/comm/ldpc.h, tests/ldpc_test.cpp: LDPC_Parity_Matrix class
	split into a set of classes, which inherits from the new base
	class LDPC_Parity. Test and tutorials programs updated
	accordingly.

2007-03-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/svec.h: Added a new method get_nz_indices(), which
	returns the indices of non-zero values in a sparse vector.

2007-03-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* config/acx_blas.m4: Fixed a bug in BLAS detection, when an
	explicit library is passed to configure using "--with-blas=..."
	option.

2007-03-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/gf2mat.cpp, itpp/base/gf2mat.h: Portability improved
	by replacing "unsigned short int" with 8-bit "unsigned char" type
	for storing data bits. Implemented missing GF2mat constructor that
	uses bmat as an argument. A few other cosmetic changes and
	documentation improvements done.

	* itpp/base/itfile.cpp, itpp/base/itfile.h: Added missing
	read/write operators for the char type

2007-03-01  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/modulator_nd.h: Added a function set_llrcalc()
	
2007-02-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: Test programs are now linked to the optimised
	library by default. Fixed the problem of missing "*.ref" files in
	the distribution package, when some modules were disabled during
	the configuration process.

	* tests/gf2mat_test.cpp: Added EXTENSIVE_TESTS macro definition,
	which turns on/off extensive tests.

2007-02-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/src/ldpc_bersim_awgn.cpp: Changed the Nbits type
	to 64-bit int64_t

	* itpp/comm/ldpc.cpp: Fixed a problem in the integrity_check()
	function when no generator is defined.
